--- a/src/todo-frontend/projects/todo/src/app/components/main/main.component.html
+++ b/src/todo-frontend/projects/todo/src/app/components/main/main.component.html
@@ -1,1 +1,36 @@
-<p>main works!</p>
+<div class="container mx-auto">
+    <div class="p-2 flex justify-center">
+        <textarea class="mx-2 text-slate-800" name="taskDescription" id="taskDescription" cols="50" rows="1"></textarea>
+        <button class="bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded" type="button">Add Task</button>
+    </div>
+    <div class="w-full flex flex-row justify-between">
+        <div>
+            <h2>New</h2>
+            <todo-task-category></todo-task-category>
+        </div>
+        <div class="w-min flex flex-col justify-center">
+            <button class="w-10 h-10 my-2 bg-blue-500 hover:bg-blue-700 font-bold rounded" type="button">
+                <span>&larr;</span>
+            </button>
+            <button class="w-10 h-10 bg-blue-500 hover:bg-blue-700 font-bold rounded" type="button">
+                <span>&rarr;</span>
+            </button>
+        </div>
+        <div>
+            <h2>In Progress</h2>
+            <todo-task-category></todo-task-category>
+        </div>
+        <div class="w-min flex flex-col justify-center">
+            <button class="w-10 h-10 my-2 bg-blue-500 hover:bg-blue-700 font-bold rounded" type="button">
+                <span>&larr;</span>
+            </button>
+            <button class="w-10 h-10 bg-blue-500 hover:bg-blue-700 font-bold rounded" type="button">
+                <span>&rarr;</span>
+            </button>
+        </div>
+        <div>
+            <h2>Completed</h2>
+            <todo-task-category></todo-task-category>
+        </div>
+    </div>
+</div>
