--- a/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
+++ b/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
@@ -1,1 +1,3 @@
-<p>task-category works!</p>
+<div class="w-full min-h-[80vh] min-w-[25vw] border border-solid border-slate-300 rounded">
+    <p>Test</p>
+</div>
