--- a/src/todo-frontend/projects/todo/src/styles.css
+++ b/src/todo-frontend/projects/todo/src/styles.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    @apply bg-slate-200 dark:bg-slate-800 text-slate-800 dark:text-slate-200
+}
