--- a/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
+++ b/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
@@ -1,3 +1,11 @@
 <div class="w-full min-h-[80vh] min-w-[25vw] border border-solid border-slate-300 rounded">
-    <p>Test</p>
+    <div class="m-2 bg-red-300 border border-solid border-green-200" *ngFor="let item of taskList">
+        <p>
+            {{item.description}}
+        </p>
+        <div class="flex justify-end">
+            <button class="p-2" type="button">Edit</button>
+            <button class="p-2" type="button">Delete</button>
+        </div>
+    </div>
 </div>
