--- a/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
+++ b/src/todo-frontend/projects/todo/src/app/components/task-category/task-category.component.html
@@ -5,7 +5,7 @@
         </p>
         <div class="flex justify-end">
             <button class="p-2" type="button">Edit</button>
-            <button class="p-2" type="button">Delete</button>
+            <button class="p-2" type="button" (click)="deleteTask(item.id)">Delete</button>
         </div>
     </div>
 </div>
